fixed background being stuck in light mode on mobile devices

--- a/docs/assets/css/theme_extra.css
+++ b/docs/assets/css/theme_extra.css
@@ -145,6 +145,9 @@ td, th {
 #pageBody {
     background-color: #151515;
 }
+#mobilePageBody {
+    background-color: #151515;
+}
 #navbar {
     border-width: 1px;
     border-color: white;
